# bitcoin-rpc-nostr

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: e2e.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  rpc.rs  tools.rs
src/: client.rs  server.rs
